--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,7 @@
     "pretest": "npm.cmd run compile",
     "posttest": "npm.cmd run lint",
     "start": "node build/src/index.js",
-    "start:dev": "ts-node src/index.ts"
+    "start:dev": "npx nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.12",
     "@types/node": "^14.11.2",
     "gts": "^3.1.0",
+    "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
     "typescript": "^4.0.3"
   },
