--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "lint": "gts lint",
     "clean": "gts clean",
     "compile": "tsc",
@@ -20,9 +20,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/got": "^9.6.11",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.11.2",
+    "got": "^9.6.0",
     "gts": "^3.1.0",
+    "mocha": "^9.0.0",
     "nodemon": "^2.0.7",
+    "nyc": "^15.1.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.0.3"
   },
