--- a/back/.eslintrc.json
+++ b/back/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "extends": "./node_modules/gts/",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "rules": {
     "node/no-unpublished-import": "off"
   }
