--- a/back/package.json
+++ b/back/package.json
@@ -2,6 +2,9 @@
   "name": "back",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "test": "nyc mocha",
