--- a/front/package.json
+++ b/front/package.json
@@ -13,11 +13,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/d3": "^6.7.0",
     "html-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "d3": "^6.7.0"
   }
 }
