--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -4,6 +4,8 @@
     "module": "es6",
     "target": "es5",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "esModuleInterop": true
   }
 }
