--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/d3": "^6.7.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
+    "sass": "^1.34.1",
+    "sass-loader": "^12.0.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
