debug: add conf for back

--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "build",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "sourceMap": true
   },
   "include": ["src/**/*.ts", "test/**/*.ts"]
 }
